--- a/ecdsa_threshold/web_server/nodejs/package.json
+++ b/ecdsa_threshold/web_server/nodejs/package.json
@@ -3,13 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
-  "scripts": {
-  },
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "big-integer": "^1.6.51",
     "json-bigint": "^1.0.0"
   }
 }
